Adicionando schema e routes de Tips
